<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

            <app.company.androidtask.Utills.MyTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_20ssp" />

            <app.company.androidtask.Utills.MyEditText
                android:id="@+id/name_text_view"
                style="@style/editTextStyle"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10_height"
                android:layout_marginTop="@dimen/_16ssp"
                android:layout_marginEnd="@dimen/_10_height"
                android:layout_marginBottom="@dimen/_10_height"
                android:drawableStart="@drawable/name"
                android:hint="@string/name"
                android:inputType="text" />

            <app.company.androidtask.Utills.MyEditText
                android:id="@+id/username_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/name"
                android:hint="@string/username"
                android:inputType="text" />


            <app.company.androidtask.Utills.MyEditText
                android:id="@+id/password_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="viewStart" />

            <app.company.androidtask.Utills.MyEditText
                android:id="@+id/confirm_password_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/password"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart" />

            <app.company.androidtask.Utills.MyEditText
                android:id="@+id/mail_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/email"
                android:hint="@string/mail"
                android:inputType="textEmailAddress" />

            <app.company.androidtask.Utills.MyEditText
                android:id="@+id/mobile_text_view"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10_height"
                android:drawableStart="@drawable/phone"
                android:hint="@string/mobile"
                android:inputType="phone" />

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4_height"
                android:layout_marginEnd="@dimen/_4_height"
                android:layout_marginBottom="@dimen/_4_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/male"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark" />

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/female"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark" />
            </RadioGroup>


            <app.company.androidtask.Utills.ButtonBold
                android:id="@+id/sign_up_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10_height"
                android:background="@drawable/shape_login_background"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_15sdp" />
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>